--- a/package.json
+++ b/package.json
@@ -9,28 +9,30 @@
   },
   "dependencies": {
     "@types/node": "^17.0.40",
+    "@vueuse/core": "^8.7.5",
     "eslint": "^8.17.0",
     "gsap": "^3.10.4",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.0.24",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
-		"@typescript-eslint/parser": "^5.25.0",
-		"@vue/eslint-config-typescript": "^10.0.0",
-		"cordova-res": "^0.15.4",
-		"eslint": "^8.16.0",
-		"eslint-plugin-vue": "^9.0.1",
-		"husky": "^8.0.1",
-		"jetifier": "^2.0.0",
-		"sass": "^1.52.1",
-		"typescript": "~4.6.4",
-		"unplugin-vue-components": "^0.19.6",
-		"vite-plugin-pages": "^0.23.0"
+    "@typescript-eslint/parser": "^5.25.0",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "autoprefixer": "^10.4.7",
+    "cordova-res": "^0.15.4",
+    "eslint": "^8.16.0",
+    "eslint-plugin-vue": "^9.0.1",
+    "husky": "^8.0.1",
+    "jetifier": "^2.0.0",
+    "postcss": "^8.4.14",
+    "sass": "^1.52.1",
+    "tailwindcss": "^3.0.24",
+    "typescript": "~4.6.4",
+    "unplugin-vue-components": "^0.19.6",
+    "vite": "^2.9.9",
+    "vite-plugin-pages": "^0.23.0",
+    "vue-tsc": "^0.34.7"
   }
 }
