--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^17.0.40",
     "@vueuse/core": "^8.7.5",
     "gsap": "^3.10.4",
+    "scss": "^0.2.4",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
   },
