--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,18 @@
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
+    "allowSyntheticDefaultImports":true,
     "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
+    "allowJs": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
-         "baseUrl": ".",
+     "baseUrl": ".",
       "paths": {
         "@/*": ["src/*"]
     },
