--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
         "@/*": ["src/*"]
     },
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/helper/anime.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
