--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"eslint-plugin-vue": "^9.0.1",
 		"husky": "^8.0.1",
 		"jetifier": "^2.0.0",
+		"parallax-js": "^3.1.0",
 		"postcss": "^8.4.14",
 		"sass": "^1.52.1",
 		"tailwindcss": "^3.0.24",
