--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/node": "^17.0.40",
 		"@vueuse/core": "^8.7.5",
 		"gsap": "^3.10.4",
+		"hover-effect": "^1.1.0",
 		"scss": "^0.2.4",
 		"vue": "^3.2.25",
 		"vue-meta": "^3.0.0-alpha.10",
