--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@theatre/core": "^0.4.7",
 		"@types/node": "^17.0.40",
 		"@vueuse/core": "^8.7.5",
 		"gsap": "^3.10.4",
